--- a/bakerydemo/templates/includes/head.html
+++ b/bakerydemo/templates/includes/head.html
@@ -11,7 +11,7 @@
     <title>
         {% block title %}
             {% block title_prefix %}
-                Wagtail demo bakery
+                Libraries Unlimited Data Stories:
             {% endblock %}
             {% if self.seo_title %}
                 {{ self.seo_title }}
@@ -42,7 +42,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
     {% block head-extra %}
     {% endblock head-extra %}
 </head>
