--- a/bakerydemo/static/css/main.css
+++ b/bakerydemo/static/css/main.css
@@ -21,7 +21,7 @@ body {
   padding-top: 0;
   padding-bottom: 0;
   font-size: 19px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: '-Open Sans', sans-serif;
   background: rgb(255,255,255);
   background: linear-gradient(135deg,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(233,228,221,1) 100%);
   min-height: 100vh;
@@ -36,7 +36,7 @@ body {
 h1 {
   font-weight: 300;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   position: relative;
 }
 
@@ -47,21 +47,21 @@ h1 {
 h2 {
   font-weight: 900;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   color: #63210d;
 }
 
 h3 {
   font-weight: 900;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   color: #63210d;
 }
 
 h4 {
   font-weight: 600;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   color: #63210d;
   font-size: 22px;
 }
@@ -86,7 +86,7 @@ a.btn {
   color: white;
   display: inline-block;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 16px;
   font-weight: 300;
   letter-spacing: 0.15em;
@@ -158,7 +158,7 @@ figcaption {
   bottom: 0;
   color: white;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 16px;
   font-weight: 300;
   left: 0;
@@ -174,7 +174,7 @@ img {
 /* Generic detail page styles */
 .intro {
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 300;
   margin: 0 0 40px;
   font-size: 22px;
@@ -222,7 +222,7 @@ blockquote footer p {
 }
 cite {
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   text-transform: uppercase;
   color: #888;
   font-size: 12px;
@@ -316,7 +316,7 @@ nav {
   color: white;
   color: white;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 11px;
   font-weight: 300;
   letter-spacing: 0.15em;
@@ -378,7 +378,7 @@ nav {
   border-bottom: 1px solid #371c19;
   color: #fff;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   padding: 10px 20px;
 }
 
@@ -407,7 +407,7 @@ li.has-submenu a.allow-toggle {
 .footer {
   font-size: 16px;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   padding: 20px 0;
   margin: 40px 0 0;
   font-weight: 300;
@@ -446,7 +446,7 @@ li.has-submenu a.allow-toggle {
   background-color: transparent;
   color: #ccc;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 14px;
   margin-bottom: 0px;
   padding-left: 0px;
@@ -510,7 +510,7 @@ nav[role=pagination] {
 .location-list-item address {
   font-weight: 300;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 1.4em;
   padding: 10px 40px;
 }
@@ -525,7 +525,7 @@ nav[role=pagination] {
 span.day {
   font-weight: bold;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
 time.location-time {
   display: block;
@@ -769,7 +769,7 @@ span.outline {
 .form-page .help {
   color: #999;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 0.8em;
   margin-top: 10px;
   max-width: 350px;
