Fixes font reference

--- a/bakerydemo/static/css/main.css
+++ b/bakerydemo/static/css/main.css
@@ -21,7 +21,7 @@ body {
   padding-top: 0;
   padding-bottom: 0;
   font-size: 19px;
-  font-family: '-Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background: rgb(255,255,255);
   background: linear-gradient(135deg,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(233,228,221,1) 100%);
   min-height: 100vh;
