--- a/bakerydemo/templates/includes/footer.html
+++ b/bakerydemo/templates/includes/footer.html
@@ -3,7 +3,7 @@
 <div class="container" role="contentinfo">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <ul class="list-inline text-center">
+            <!--<ul class="list-inline text-center">
                 <li>
                     <a href="https://github.com/wagtail/wagtail">
                         <span class="fa-stack fa-lg">
@@ -28,7 +28,7 @@
                         </span>
                     </a>
                 </li>
-            </ul>
+            </ul>-->
             {% get_footer_text %}
         </div>
     </div>
