--- a/bakerydemo/templates/blocks/embed_block.html
+++ b/bakerydemo/templates/blocks/embed_block.html
@@ -1,3 +1,3 @@
 {% load wagtailimages_tags %}
 {{ self }}
-<iframe style="border: none; width: 100%; height: 100%;" src="{{ self.url }}"></iframe>
+<iframe style="border: none; width: 100%; height: 600px;" src="{{ self.url }}"></iframe>
