--- a/bakerydemo/templates/includes/head.html
+++ b/bakerydemo/templates/includes/head.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alegreya:400,700|Lato:300,400,700,900" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link rel="stylesheet" type="text/css" href="https://dataplace-wagtail-test2.s3.amazonaws.com/static/css/main.css">
+    <link href="{% static "css/main.css" %}" rel="stylesheet" type="text/css">
 
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
