--- a/bakerydemo/static/css/main.css
+++ b/bakerydemo/static/css/main.css
@@ -201,7 +201,7 @@ content[role="main"] > .container > .row > .col-md-8 {
 }
 @media screen and (max-width: 768px) {
   content[role="main"] {
-    padding-top: 52px;
+    padding-top: 2em;
   }
   .hero {
     padding: 200px 0 60px 0;
@@ -352,7 +352,7 @@ ul.nav.nav-pills {
     background: white;
     left: 0;
     right: 0;
-    top: 130px;
+    top: 100px;
     height: auto;
     display: none !important;
   }
